bulletinboard-reviews-java/.k8s/3_bulletinboard-reviews.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bulletinboard-reviews
spec:
  selector:
    matchLabels:
      app: bulletinboard-reviews
  replicas: 1
  template:
    metadata:
      labels:
        app: bulletinboard-reviews
    spec:
      imagePullSecrets:
        - name: docker-registry
      containers:
        - name: app
          image: cc-ms-k8s-training.common.repositories.cloud.sap/bulletinboard-reviews-<your D/C/I number>
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bulletinboard-reviews
spec:
  selector:
    app: bulletinboard-reviews
  ports:
    - name: app
      port: 9090
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert.gardener.cloud/purpose: managed
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: bulletinboard-reviews
spec:
  rules:
    - host: app.ingress.<CLUSTER>.<PROJECT>.shoot.canary.k8s-hana.ondemand.com
      http:
        paths:
          - path: /reviews(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: bulletinboard-reviews
                port:
                  number: 9090
  tls:
    - hosts:
        - app.ingress.<CLUSTER>.<PROJECT>.shoot.canary.k8s-hana.ondemand.com
      secretName: app-certs
